fixing slider on firefox

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -628,6 +628,21 @@ z-index: 1;
     z-index: 10;
 }
 
+.firefox {
+  display: none;
+}
+
+@-moz-document url-prefix() { 
+  .firefox {
+    display: block;
+}
+
+.chrome {
+  display: none;
+}
+
+}
+
 
 .seekctr {
     position: relative;
